static/base.css
/* ... */
/* #profil-picture {
    width: 150px;
    height: 150px;
    border-radius: 100%;
    position: relative;
    background: linear-gradient(to right, red, purple);
    padding: 5px;
}

#profil-picture img {
    width: 100%;
    height: 100%;
    border-radius: 100%;
}

#profil-top-info h2 {
    font-size: 30px;
    margin-top: 10px;
}

#profil-top-info p {
    font-size: 14px;
    margin-top: 5px;
}

#profil-top-info h3 {
    font-size: 20px;
    margin-top: 10px;
}



#profil-bottom-info {
    margin: 20px 0 0 0;
    display: flex;
    flex-wrap: wrap;
    height: 33%;
    justify-content: space-between;
}

#profil-bottom-info .stat-item {
    width: 32%;
    background-color: rgba(255, 255, 255, 0.1);
    border-radius: 12px;
    text-align: center;
}

#profil-other-buttons {
    display: flex;
    height: 15%;
    margin-top: 15px;
    justify-content: center;
    align-items: center;
}

.stat-item * {
    margin: 0;
    padding: 0;
}

.stat-item .percent {
    color: white;
    font-size: 40pt;
    margin-top: 20px;
}

.stat-item .percent sup {
    color: grey;
    font-size: 23pt;
}

.stat-item .percent span {
    color: grey;
    font-size: 18pt;
} */



.topbar {
    backdrop-filter: blur(10px);
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 60px;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 99;
    padding-left: 60px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}


/* Réinitialisation des styles */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Barre de navigation futuriste */
.top-bar-first {
    list-style: none;
    display: flex;
    background-color: transparent;
    padding-right: 20px;
    align-items: center;
    /* justify-content: flex-end; */
    width: fit-content;
}

.top-bar-first {
    height: 60px;
}

.top-bar-first li {
    margin-left: 20px;
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    height: 100%;
    justify-content: center;
}

nav ul li a {
    text-decoration: none;
    color: white;
    font-size: 21px;
    transition: color 0.3s ease-in-out;
}

nav ul li a:hover {
    color: #00b0e8;
}


/* Bannière promotionnelle */
.banner {
    position: relative;
    overflow: hidden;
    cursor: pointer;
    border-radius: 10px;
    margin-bottom: 50px;
    height: 70vh;
}

.banner img {
    width: 100%;
    height: auto;
    /* opacity: 0.7; */
    transition: opacity 0.3s ease-in-out;
}

/* .banner img:hover {
    opacity: 1;
} */

.banner-content {
    position: absolute;
    padding: 20px;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    text-align: center;
    background-color: rgba(255, 255, 255, 0.05);
    border-radius: 10px;
    transition: background-color 0.3s ease-in-out;
}

.banner-content:hover {
    background-color: rgba(255, 255, 255, 0.3);
}

.banner-content h2 {
    font-size: 36px;
    margin-bottom: 10px;
}

.banner-content button {
    background-color: #00b0e8;
    color: white;
    border: none;
    padding: 10px 20px;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
    transition: background-color 0.3s ease-in-out;
}

.banner-content button:hover {
    background-color: #0094c5;
}

/* Grille de films futuriste */

.scroller-grid {
    display: grid;
    /* grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); */
    grid-auto-columns: max-content;
    grid-template-rows: 1fr;
    gap: 20px;
    padding: 40px 20px;
    overflow-x: auto;
    /* overflow-y: hidden; */
    height: 500px;
}

.scroller-card {
    grid-row: 1;
    height: 100%;
    grid-column: auto;
    background-color: rgba(255, 255, 255, 0.05);
    padding: 20px;
    border-radius: 10px;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: calc(500px - (40px *2) - (20px *2));
    transition: background-color 0.3s ease-in-out;
}

.scroller-card img {
    width: 100%;
    height: 100%;
    border-radius: 10px;
}

.scroller-card h3 {
    font-size: 20px;
    margin-top: 10px;
}

.scroller-card p {
    font-size: 14px;
    margin-top: 5px;
}

.scroller-card:hover {
    background-color: rgba(255, 255, 255, 0.3);
}


#scroller-previewer {
    position: fixed;
    top: 0;
    left: 60px;
    /* Correspond à la marge gauche de la barre latérale */
    width: calc(100% - 60px);
    /* Largeur de la section principale */
    background-color: rgba(0, 0, 0, 0.8);
    color: white;
    padding: 20px;
    display: flex;
    visibility: hidden;
    opacity: 0;
    z-index: 99;
    transition: visibility 0.3s ease-in-out,
        opacity 0.3s ease-in-out;
}

#scroller-previewer.active {
    transition: visibility 0.3s ease-in-out,
        opacity 0.3s ease-in-out;
    /* display: flex; */
    visibility: visible;
    opacity: 1;
}

#scroller-info {
    width: 50%;
}






/* Pied de page futuriste */
footer ul {
    list-style: none;
    display: flex;
    justify-content: center;
    background-color: transparent;
    padding: 20px;
}

footer ul li {
    margin-left: 20px;
}

footer ul li a {
    text-decoration: none;
    color: white;
    font-size: 20pt;
    transition: color 0.3s ease-in-out;
}

footer ul li a:hover {
    color: #00b0e8;
}



/* Barre latérale */
.sidebar {
    backdrop-filter: blur(10px);
    background-color: rgba(0, 0, 0, 0.5);
    height: 100vh;
    width: 60px;
    margin-top: 60px;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    z-index: 100;
}

.subsidebar {
    width: 200px;
    left: 60px;
    height: 100vh;
    position: fixed;
    top: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    backdrop-filter: blur(10px);
    background-color: rgba(0, 0, 0, 0.5);
    animation: subsidebar-animate-reverse 0.3s ease-in-out;
    transform: translateX(-150%);
    overflow: hidden;
}
/* ... */

